--- a/admin/css/easy-slider-admin.css
+++ b/admin/css/easy-slider-admin.css
@@ -3,37 +3,13 @@
  * included in this file.
  */
 
-.easy-slider .card{
-    padding: 0;
-    max-width: initial;
-    box-shadow: none;
-}
-
-.easy-slider input[type=checkbox],.easy-slider input[type=radio] {
-    border: none;
-    border-radius: initial;
-    background: none;
-    color: initial;
-    clear: none;
-    cursor: pointer;
-    display: initial;
-    line-height: 0;
-    height: initial;
-    margin: 0;
-    margin-left: -1.25rem;
-    margin-top: .3rem;
-    outline: 0;
-    padding: 0!important;
-    text-align: initial;
-    vertical-align: initial;
-    width: initial;
-    min-width: initial;
-    -webkit-appearance: checkbox;
-    box-shadow: none;
-    transition: initial;
-}
-
+.easy-slider .card{padding: 0;max-width: initial;box-shadow: none;}
 .easy-slider input[type=checkbox]:checked::before {content: none;}
-
 .easy-slider #your-profile label+a, label{vertical-align: initial;}
+.easy-slider input[type=checkbox]{margin-top: .60em;background-repeat: no-repeat;transition:background-color .15s ease-in-out,background-position .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out}
 
+.btn.popover-dismiss{text-decoration: none;color: #212529;}
+.btn.popover-dismiss:focus{box-shadow: none;}
+
+#wpwrap{background: #f1f1f1;}
+.content-slide img{max-height: 80px;}
